# codex-need-approve

./: .gitignore  Cargo.toml  LICENSE  README.md  start-codex-need-approve.cmd  stop-codex-need-approve.cmd
.github/workflows/: release.yml
installer/: Product.wxs
src/: lib.rs  main.rs
